--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/styles.css"
     </head>
     <body>
-            <div>
+            <div class = "navigation">
                 <ul>
                     <li>Home</li>
                     <li>Portfólio</li>
@@ -14,10 +14,10 @@
                     <li>Contato</li>
                 </ul>
             </div>
-            <div>
-                <img src="" alt="Maycom Rodrigues" />
+            <div class="capa">
+                <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
                 <h1>Maycom Rodrigues</h1>
-                <h2>Desenvolvedor de Sistemas</h2>
+                <h2>Analista e Desenvolvedor de Sistemas</h2>
             </div>
     </body>
 </html>
