Configurando importacao e ajuste da fonte

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
                 </ul>
             </div>
             <div class="capa">
-                <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
-                <h1>Maycom Rodrigues</h1>
-                <h2>Analista e Desenvolvedor de Sistemas</h2>
+                <div class ="profile-pic">
+                    <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
+                </div>
+                <div class="profile-title">                
+                    <h1>Maycom<span>Rodrigues</span></h1>
+                    <h2>Analista e Desenvolvedor Back-end</h2>
+                </div>
             </div>
     </body>
 </html>
