Adicionando nova página

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <title>Maycom José de Oliveira Rodrigues - Portfólio Online</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="css/styles.css"
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
             <div class = "navigation">
                 <ul>
                     <li>Home</li>
                     <li>Portfólio</li>
-                    <li>Currículo</li>
+                    <li><a href="curriculo.html">Currículo</a></li>
                     <li>Contato</li>
                 </ul>
             </div>
