--- a/curriculo.html
+++ b/curriculo.html
@@ -16,6 +16,7 @@
                     <li>Portfólio</li>
                     <li><a href="curriculo.html">Currículo</a></li>
                     <li>Contato</li>
+                    <li class="treeline-con"></li>
                 </ul>
             </div>
             <ul class ="caminho">
