--- a/curriculo.html
+++ b/curriculo.html
@@ -6,6 +6,9 @@
 
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -99,7 +102,7 @@
                     <p>seu e-mail aqui</p>
                     <p>seu telefone aqui</p>
 
-            <a href="#"> Voltar ao início</a>
+            <a href="index.html"> Voltar ao início</a>
         </div>
     </body>
 </html>
