--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>Maycom José de Oliveira Rodrigues - Portfólio Online</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
+        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
             <div class = "navigation">
@@ -12,8 +16,10 @@
                     <li>Portfólio</li>
                     <li><a href="curriculo.html">Currículo</a></li>
                     <li>Contato</li>
+                    <li class="threeline-icon" onclick="openNav()">&#9776;</li>
                 </ul>
             </div>
+        
             <div class="capa">
                 <div class ="profile-pic">
                     <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
