--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-            <div class = "navigation">
+                <div id="navigation" class="navigation">
                 <ul>
                     <li>Home</li>
                     <li>Portfólio</li>
                     <li><a href="curriculo.html">Currículo</a></li>
-                    <li>Contato</li>
-                    <li class="threeline-icon" onclick="openNav()">&#9776;</li>
+                    <li><a href="contato.html">Contato</li>
+                    <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
                 </ul>
             </div>
-        
+        <div>
             <div class="capa">
                 <div class ="profile-pic">
                     <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
