--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,8 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-             <div id="navigation" class="navigation">
+        <div clas="main">
+                <div id="navigation" class="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portfólio</a></li>
@@ -19,14 +20,12 @@
                     <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
                 </ul>
             </div>
-            <div class="capa">
-                <div class ="profile-pic">
-                    <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
-                </div>
-                <div class="profile-title">                
-                    <h1>Maycom<span>Rodrigues</span></h1>
-                    <h2>Analista e Desenvolvedor Back-end</h2>
-                </div>
+
+            <h2>Contato</h2>
+
+            <p>E-mail:maycomjose70@gmail.com</p>
+            <p>Telefone: (15)988099420</p>
+            <p>Linkedin: <a href=" www.linkedin.com/in/maycom-rodrigues-a3b1021ba"> www.linkedin.com/in/maycom-rodrigues-a3b1021ba </a></p>
+            <p>GitHub: <a href="https://github.com/M4ycomRodrigues"> https://github.com/M4ycomRodrigues</a></p>
+
             </div>
-    </body>
-</html>
