--- a/portifolio.html
+++ b/portifolio.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-             <div id="navigation" class="navigation">
+                <div id="navigation" class="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portfólio</a></li>
@@ -19,14 +19,14 @@
                     <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
                 </ul>
             </div>
-            <div class="capa">
-                <div class ="profile-pic">
-                    <img src="images/perfil_imagem.png" alt="Maycom Rodrigues" />
-                </div>
-                <div class="profile-title">                
-                    <h1>Maycom<span>Rodrigues</span></h1>
-                    <h2>Analista e Desenvolvedor Back-end</h2>
-                </div>
-            </div>
-    </body>
-</html>
+            <div class="main">  
+                <ul class ="caminho">
+                    <li><a href="index.html">Home</a></li>
+                    <li>></li>
+                    <li>Portfólio</a></li>
+                </ul>
+
+                <img class="cv-pic-port" img src="images/paginamercado.png" alt="Projeto 1"/>
+                <div class="legenda">Projeto 1</figcaption>
+</div>
+
