Config. Portifólio part. 2

--- a/contato.html
+++ b/contato.html
@@ -20,12 +20,12 @@
                     <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
                 </ul>
             </div>
-
+            <div class="contato">
             <h2>Contato</h2>
 
             <p>E-mail:maycomjose70@gmail.com</p>
             <p>Telefone: (15)988099420</p>
             <p>Linkedin: <a href=" www.linkedin.com/in/maycom-rodrigues-a3b1021ba"> www.linkedin.com/in/maycom-rodrigues-a3b1021ba </a></p>
             <p>GitHub: <a href="https://github.com/M4ycomRodrigues"> https://github.com/M4ycomRodrigues</a></p>
-
+</div>
             </div>
