Config. Portifólio part. 3

--- a/projeto1.html
+++ b/projeto1.html
@@ -21,7 +21,12 @@
             </div>
             <div class="main">  
                 <ul class ="caminho">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="portifolio.html">Portifólio</a></li>
                     <li>></li>
-                    <li>Portifólio</a></li>
+                    <li>projeto1</a></li>
                 </ul>
+                <div class="legenda">
+                    <div><img class="cv-pic-port" src="images/pagina1.PNG" alt="Projeto 1"/></div>
+                    <div><img class="cv-pic-port" src="images/pagina2.PNG" alt="Projeto 1"/></div>
+                    <div><img class="cv-pic-port" src="images/pagina3.PNG" alt="Projeto 1"/></div>
+                </div>
