--- a/contato.html
+++ b/contato.html
@@ -10,22 +10,25 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <div clas="main">
-                <div id="navigation" class="navigation">
-                <ul>
+
+            <div id="navigation" class="navigation">
+                    <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portfólio</a></li>
                     <li><a href="curriculo.html">Currículo</a></li>
                     <li><a href="contato.html">Contato</a></li>
                     <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
-                </ul>
+                    </ul>
             </div>
-            <div class="contato">
-            <h1>Contato</h1>
+            <div class="main">
+                <div class="contato">
+                    <h1>Contato</h1>
 
-            <p>E-mail:maycomjose70@gmail.com</p>
-            <p>Telefone: (15)988099420</p>
-            <p>Linkedin: <a href=" www.linkedin.com/in/maycom-rodrigues-a3b1021ba"> www.linkedin.com/in/maycom-rodrigues-a3b1021ba </a></p>
-            <p>GitHub: <a href="https://github.com/M4ycomRodrigues"> https://github.com/M4ycomRodrigues</a></p>
-</div>
-            </div>
+                    <p>E-mail: maycomjose70@gmail.com</p>
+                    <p>Telefone: (15)988099420</p>
+                    <p>Linkedin: <a href="https://www.linkedin.com/in/maycom-rodrigues">https://www.linkedin.com/in/maycom-rodrigues</a></p>
+                    <p>GitHub: <a href="https://github.com/M4ycomRodrigues"> https://github.com/M4ycomRodrigues</a></p>
+                </div>
+        </div>
+    </body>
+</html>
