--- a/portifolio.html
+++ b/portifolio.html
@@ -10,26 +10,32 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-                <div id="navigation" class="navigation">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portifolio.html">Portfólio</a></li>
-                    <li><a href="curriculo.html">Currículo</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                    <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
-                </ul>
-            </div>
-            <div class="main">  
-                <ul class ="caminho">
-                    <li><a href="index.html">Home</a></li>
-                    <li>></li>
-                    <li>Portifólio</a></li>
-                </ul>
-                <div class="legenda">
-                    <div><img class="cv-pic-port" src="images/paginamercado.png" alt="Projeto 1"/></div>
-                
-                <div><a href="projeto1.html">Projeto 1</a></div> 
-            </div>
-</div>
+        <div id="navigation" class="navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portifolio.html">Portfólio</a></li>
+                <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
+            </ul>
+        </div>
+        <div class="main">  
+            <ul class ="caminho">
+                <li><a href="index.html">Home</a></li>
+                <li>></li>
+                <li>Portifólio</a></li>
+            </ul>
+            <div class="legenda">
+                <div>
+                        <img class="cv-pic-port" src="images/paginamercado.png" alt="Projeto 1" />
 
-t
+                </div>
+                <a href="projeto1.html"> 
+                <div class="overlay">
+                    <p class="image-legenda">Projeto Mercearia - Em andamento</p>
+                </div> 
+            </a>
+            </div>
+        </div>
+    </body>
+</html>
