--- a/projeto1.html
+++ b/projeto1.html
@@ -10,15 +10,15 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-                <div id="navigation" class="navigation">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portifolio.html">Portfólio</a></li>
-                    <li><a href="curriculo.html">Currículo</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                    <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
-                </ul>
-            </div>
+        <div id="navigation" class="navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portifolio.html">Portfólio</a></li>
+                <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
+            </ul>
+        </div>
             <div class="main">  
                 <ul class ="caminho">
                     <li><a href="portifolio.html">Portifólio</a></li>
@@ -30,3 +30,6 @@
                     <div><img class="cv-pic-port" src="images/pagina2.PNG" alt="Projeto 1"/></div>
                     <div><img class="cv-pic-port" src="images/pagina3.PNG" alt="Projeto 1"/></div>
                 </div>
+            </div>
+    </body>
+</html>
