--- a/projeto1.html
+++ b/projeto1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maycom José de Oliveira Rodrigues - Portfólio Online</title>
+        <title>Maycom José de Oliveira Rodrigues - Portifólio Online</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
         <div id="navigation" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portifolio.html">Portfólio</a></li>
+                <li><a href="portifolio.html">Portifólio</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
